Remove or replace pre-java-8 MaxPermSize jvm args from the codebase